syntax = "proto3";

option csharp_namespace = "Personal_blog";

import "Protos/google/api/annotations.proto";

package personalBlog;

service Authorization {
  rpc login (LoginForm) returns (TokenResponse){
    option (google.api.http) = {
      post: "/v1/authorization/login"
      body: "*"
    };
  };
  rpc register (RegisterForm) returns (TokenResponse){
    option (google.api.http) = {
      post: "/v1/authorization/register"
      body: "*"
    };
  };
}

message LoginForm {
  string username = 1;
  string password = 2;
}

message RegisterForm {
  string username = 1;
  string password = 2;
  string passwordConfirm = 3;
}

message TokenResponse {
  string token = 1;
}
